Remove Java 21 feature